# GRFN

./: .gitattributes  .gitignore  .stan.toml  CHANGELOG.md  Makefile  README.md  cabal.project.local  githubtestkey  githubtestkey.pub  grfn-benchmark.tix  grfn-exe.tix  grfn-test.tix  grfn.cabal  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  hreaded  report.html  stack.yaml
.github/workflows/: ci.yml
.hie/: FactoredRandomNumbers.hie  Main.hie  RefinementHelper.hie  ShortCircuit.hie  hie.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/00a5cd71/: cabal_macros.h
.stack-work/ghci/0533c981/: cabal_macros.h
.stack-work/ghci/117ec845/: cabal_macros.h
.stack-work/ghci/1fcf2c1e/: cabal_macros.h
.stack-work/ghci/25aa360a/: cabal_macros.h
.stack-work/ghci/2dc90227/: cabal_macros.h
.stack-work/ghci/34b31a8d/: cabal_macros.h
.stack-work/ghci/3c8697ac/: cabal_macros.h
.stack-work/ghci/3decb6a9/: cabal_macros.h
.stack-work/ghci/40786362/: cabal_macros.h
.stack-work/ghci/43514f83/: cabal_macros.h
.stack-work/ghci/44b05281/: cabal_macros.h
.stack-work/ghci/57c3feda/: cabal_macros.h
.stack-work/ghci/5bb4c656/: cabal_macros.h
.stack-work/ghci/5fb2ee55/: cabal_macros.h
.stack-work/ghci/74831dbf/: cabal_macros.h
.stack-work/ghci/7596d60d/: cabal_macros.h
.stack-work/ghci/78a6df2b/: cabal_macros.h
.stack-work/ghci/797122e8/: cabal_macros.h
.stack-work/ghci/7fc2b041/: cabal_macros.h
.stack-work/ghci/8a7d8ced/: cabal_macros.h
.stack-work/ghci/95bcb607/: cabal_macros.h
.stack-work/ghci/9f5250f0/: cabal_macros.h
.stack-work/ghci/b518c85b/: cabal_macros.h
.stack-work/ghci/c433a02f/: cabal_macros.h
.stack-work/ghci/c7f7d5bf/: cabal_macros.h
.stack-work/ghci/c99f03b0/: cabal_macros.h
.stack-work/ghci/cc0ca082/: cabal_macros.h
.stack-work/ghci/ce079374/: cabal_macros.h
.stack-work/ghci/d1f340e0/: cabal_macros.h
.stack-work/ghci/d7401478/: cabal_macros.h
.stack-work/ghci/fb5ff322/: cabal_macros.h
.stack-work/ghci/fcd3ae45/: cabal_macros.h
.stack-work/install/aarch64-osx/24804349dde72c223412bc806d2ce9a9cf247a16bba368511c9ed5b556569a07/9.6.5/lib/aarch64-osx-ghc-9.6.5/: libHSgrfn-1.0.0.0-3slAtOEe9iM4V5W105i5u0-ghc9.6.5.dylib
.stack-work/install/aarch64-osx/24804349dde72c223412bc806d2ce9a9cf247a16bba368511c9ed5b556569a07/9.6.5/pkgdb/: grfn-1.0.0.0-3slAtOEe9iM4V5W105i5u0.conf  package.cache
.stack-work/install/aarch64-osx/425ae6fe7025259ea6a7610bbfc7c7e1eeb656a4e4152146312118f024f02c73/9.4.8/lib/aarch64-osx-ghc-9.4.8/: libHSgrfn-0.1.0.0-DMSYcRzv5GD9sFt6L5jX4o-ghc9.4.8.dylib
.stack-work/install/aarch64-osx/425ae6fe7025259ea6a7610bbfc7c7e1eeb656a4e4152146312118f024f02c73/9.4.8/lib/aarch64-osx-ghc-9.4.8/grfn-0.1.0.0-DMSYcRzv5GD9sFt6L5jX4o/: Lib.dyn_hi  Lib.hi
.stack-work/install/aarch64-osx/425ae6fe7025259ea6a7610bbfc7c7e1eeb656a4e4152146312118f024f02c73/9.4.8/pkgdb/: grfn-0.1.0.0-DMSYcRzv5GD9sFt6L5jX4o.conf  package.cache
.stack-work/install/aarch64-osx/613130b6d085b46b04908be181740e21601105f4f100aa3c399de87c5e1fbed8/9.4.8/lib/aarch64-osx-ghc-9.4.8/: libHSgrfn-0.1.0.0-768hyxboPb1CJEHqlYNTzA-ghc9.4.8.dylib  libHSgrfn-0.1.0.0-CYgy1g9NdQ23bFNTvtyKRX-ghc9.4.8.dylib
.stack-work/install/aarch64-osx/613130b6d085b46b04908be181740e21601105f4f100aa3c399de87c5e1fbed8/9.4.8/lib/aarch64-osx-ghc-9.4.8/grfn-0.1.0.0-768hyxboPb1CJEHqlYNTzA/: Lib.dyn_hi  Lib.hi
.stack-work/install/aarch64-osx/81621157ed3d388c399c60b0ea22a435057ef0d6ae25c54619227378d9b244ae/9.6.5/lib/aarch64-osx-ghc-9.6.5/: libHSgrfn-1.0.0.0-8PpttjnMayPEjOpZNzjzRC-ghc9.6.5.dylib
.stack-work/install/aarch64-osx/81621157ed3d388c399c60b0ea22a435057ef0d6ae25c54619227378d9b244ae/9.6.5/pkgdb/: grfn-1.0.0.0-8PpttjnMayPEjOpZNzjzRC.conf  package.cache
.stack-work/install/aarch64-osx/83b8e52cf51e0636cb104a94336fdd5c4077f15748a21c6b60971868afacbdc5/9.6.5/lib/aarch64-osx-ghc-9.6.5/: libHSgrfn-1.0.0.0-8CSYazh8zj3KMwril0KfZz-ghc9.6.5.dylib  libHSgrfn-1.0.0.0-AISsu6ny2ckIw7P4y3Fn9s-ghc9.6.5.dylib  libHSgrfn-1.0.0.0-JRyTdNyMJCtBcpnRl6sfEp-ghc9.6.5.dylib  libHSgrfn-1.0.0.0-iSno4YJMVv72e0FbjBA5U-ghc9.6.5.dylib
.stack-work/install/aarch64-osx/83b8e52cf51e0636cb104a94336fdd5c4077f15748a21c6b60971868afacbdc5/9.6.5/pkgdb/: grfn-1.0.0.0-8CSYazh8zj3KMwril0KfZz.conf  grfn-1.0.0.0-AISsu6ny2ckIw7P4y3Fn9s.conf  grfn-1.0.0.0-JRyTdNyMJCtBcpnRl6sfEp.conf  package.cache
.stack-work/install/aarch64-osx/96b473bb4813dd7bf9a7d801fc543769904307c12242ddd0fed2aa46fa433319/9.6.5/doc/grfn-1.0.0.0/: LICENSE
.stack-work/install/aarch64-osx/96b473bb4813dd7bf9a7d801fc543769904307c12242ddd0fed2aa46fa433319/9.6.5/lib/aarch64-osx-ghc-9.6.5/: libHSgrfn-1.0.0.0-2ENvYsX8O367vPQZFV5mUA-ghc9.6.5.dylib  libHSgrfn-1.0.0.0-K4y6hSmM29L7IeX6hZD4WD-ghc9.6.5.dylib
.stack-work/install/aarch64-osx/96b473bb4813dd7bf9a7d801fc543769904307c12242ddd0fed2aa46fa433319/9.6.5/pkgdb/: grfn-1.0.0.0-2ENvYsX8O367vPQZFV5mUA.conf  grfn-1.0.0.0-K4y6hSmM29L7IeX6hZD4WD.conf  package.cache
.stack-work/install/aarch64-osx/af928a3b5c958531e8c5038b723128257ef542e1e65002988934c45dfcc8fbe0/9.4.8/lib/aarch64-osx-ghc-9.4.8/: libHSgrfn-0.1.0.0-CYgy1g9NdQ23bFNTvtyKRX-ghc9.4.8.dylib
Bench/: BenchFactoredRandomNumbers.hs
app/: Main.hs
cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.8/: grfn-0.1.0.0-inplace.conf  package.cache
grfn-1.0.0.0-inplace/: FactoredRandomNumbers.hs.html  ShortCircuit.hs.html
src/: FactoredRandomNumbers.hs  Lib.hs  RefinementHelper.hs  ShortCircuit.hs
src/.liquid/: Lib.hs.bak  Lib.hs.cst.html  Lib.hs.err  Lib.hs.html  Lib.hs.json  Lib.hs.smt2  Lib.hs.vim.annot  RefinementHelper.hs.bak  RefinementHelper.hs.cst.html  RefinementHelper.hs.err  RefinementHelper.hs.html  RefinementHelper.hs.json  RefinementHelper.hs.smt2  RefinementHelper.hs.vim.annot  T2093.hs.bak  T2093.hs.cst.html  T2093.hs.err  T2093.hs.html  T2093.hs.json  T2093.hs.smt2  T2093.hs.vim.annot
test/: Spec.hs
(+10 files in other folders)
