cabal-version:       3.0

name:                grfn
version:             1.0.0.0
homepage:            https://github.com/threeeyedgod/grfn#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              VN
maintainer:          example@example.com
copyright:           2024 ThreeEyedGod
synopsis:            Uniformly-random pre-factored number generation as per Kalai's algorithm
description:
    This is a implementation of this paper ["Get pre-factored random numbers easily"](https://twitter.com/michael_nielsen/status/1724854680990486780?s=20). 
    The full paper may be read [here](https://link.springer.com/content/pdf/10.1007/s00145-003-0051-5.pdf).
    A synopsis is available in a different paper (https://math.dartmouth.edu/~carlp/kalai3.pdf) dealing 
    with getting pre-factored random numbers for Gausian distributions.
    .
    A reference Python implemention is [here](https://www.johndcook.com/blog/2023/11/17/factored-random-numbers/).
    .
    The Adam Kalai algorithm itself is an easier (but less efficient) version of 
    [Eric Bach's original algorithm](https://pages.cs.wisc.edu/~cs812-1/pfrn.pdf). 
    .
    As an example, a single pre-factored number may be obtained by one of these 3 calls. preFactoredNumOfBitSizePar is a parallel
    implementation:

      >>> genARandomPreFactoredNumberLTEn 20 -- will give a pre-factored number less than or equal to 20.
      >>> Right (8,[2,2,2,1])

      >>> preFactoredNumOfBitSize 20 -- will give a pre-factored number less than or equal to [2^20, 2^21 - 1]
      >>> Right (1695177,[17123,11,3,3,1])

      >>> preFactoredNumOfBitSizePar 60 -- will give a pre-factored number less than or equal to [2^60, 2^61 - 1]
      >>> Right (1245467344549977447,[332515759,233924281,179,19,3,3,1])
    

category:            Numeric Probability 
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib, RefinementHelper, ShortCircuit
  build-depends:       base                 >= 4.11.1.0 && < 5
                      ,protolude
                      ,text
                      ,random
--                      ,liquidhaskell == 0.9.2.8.0
                      ,liquidhaskell == 0.9.4.7.0
                      ,primes
                      ,tuple >= 0.3.0.2
                      ,monad-loops >= 0.4.3
                      ,time >= 1.12.2
                      ,parallel-io >= 0.3.5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fplugin=LiquidHaskell
                       -fwrite-ide-info
                       -hiedir=.hie
                       
executable grfn-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , grfn
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N4

test-suite grfn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , grfn
                     , QuickCheck >= 2.14.3
                     , regex-posix
                     , primes
                     , text
                     , hspec >= 2.11.7
                     , hspec-core >= 2.11.7
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -XTemplateHaskell

source-repository head
  type:     git
  location: https://github.com/threeeyedgod/grfn
