cabal-version:       3.6
name:                grfn
version:             1.0.0.0
homepage:            https://github.com/threeeyedgod/grfn#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              VN
maintainer:          venkatesh.narayanan@live.in
copyright:           2024 ThreeEyedGod
synopsis:            Uniformly-random pre-factored number generation as per Kalai's algorithm
description:
    This is an implementation of this paper ["Get pre-factored random numbers easily"](https://twitter.com/michael_nielsen/status/1724854680990486780?s=20). 
    The full paper may be read [here](https://link.springer.com/content/pdf/10.1007/s00145-003-0051-5.pdf).
    A synopsis is available in a different paper (https://math.dartmouth.edu/~carlp/kalai3.pdf) dealing 
    with getting pre-factored random numbers for Gaussian distributions.
    .
    A reference Python implemention is [here](https://www.johndcook.com/blog/2023/11/17/factored-random-numbers/).
    .
    The Adam Kalai algorithm itself is an easier (but less efficient) version of 
    [Eric Bach's original algorithm](https://pages.cs.wisc.edu/~cs812-1/pfrn.pdf). 
    
    As an example, a single pre-factored number may be obtained by one of these 3 calls. preFactoredNumOfBitSizePar is a parallel
    implementation.

      >>> genARandomPreFactoredNumberLTEn 20 -- will give a pre-factored number less than or equal to 20.
      >>> Right (8,[2,2,2,1])

      >>> preFactoredNumOfBitSize 20 -- will give a pre-factored number less than or equal to [2^20, 2^21 - 1]
      >>> Right (1695177,[17123,11,3,3,1])

      >>> preFactoredNumOfBitSizePar 60 -- will give a pre-factored number less than or equal to [2^60, 2^61 - 1]
      >>> Right (1245467344549977447,[332515759,233924281,179,19,3,3,1])
    

category:            Numeric Probability 
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     FactoredRandomNumbers
  build-depends:       base                 >= 4.11.1.0 && < 5
                      ,protolude
                      ,text
                      ,random>=1.2.1.2
                      ,primes
                      ,arithmoi>=0.13.0.0
                      ,tuple >= 0.3.0.2
                      ,monad-loops >= 0.4.3
                      ,parallel-io >= 0.3.5
                      ,async>=2.2.5
                      ,parallel>=3.2.2.0
                      ,unamb>=0.2.7
  default-language:    Haskell2010
  ghc-options:         -Wall
                       ---Werror
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fwrite-ide-info
                       -hiedir=.hie
                       -fhpc
                       -O2
                       
executable grfn-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , grfn
                     , mtl>=2.3.1
                     , transformers-base>=0.4.6
                     , monad-par >= 0.3.5
                     , abstract-par >= 0.3.3
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N4
                       -fhpc
                       -O2

test-suite grfn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , grfn
                     , QuickCheck >= 2.14.3
                     , primes
                     , text
                     , hspec >= 2.11.7
                     , hspec-core >= 2.11.7
                     , time >= 1.12.2

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts

source-repository head
  type:     git
  location: https://github.com/threeeyedgod/grfn

benchmark grfn-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             BenchFactoredRandomNumbers.hs
  build-depends:       base
                     , tasty-bench
                     , grfn
                     , tasty >= 1.5
  default-language:    Haskell2010
  ghc-options:   "-with-rtsopts=-A32m"
  if impl(ghc >= 8.6)
    ghc-options: -fproc-alignment=64

